# cmt-stitching-system

./: .gitignore  AGENTS.md  CLAUDE.md  Project Structure  README.md  qa_smoke_test.py
backend/: .dockerignore  Dockerfile  import_ledger.py  migrate_split_bills.py  pyproject.toml  railway.json  render.yaml  requirements.txt  seed_cash_accounts.py  test_smoke.py
backend/alembic/: env.py
backend/alembic/versions/: 040840699daa_add_size_to_order_accessories.py  4d1e3598580f_initial_schema.py  6372e9df1d35_add_reserve_amount_to_cash_accounts.py  750a1916cced_add_party_type_and_bill_rate_templates.py  860bf63b6a35_add_inventory_item_to_accessories.py  a1b2c3d4e5f6_change_payment_terms_to_string.py  b2c3d4e5f6a7_add_quality_tables.py  c3d4e5f6a7b8_add_dispatch_fields.py  d4e5f6a7b8c9_add_expense_fields_to_orders.py  e5f6a7b8c9d0_add_inventory_endpoints.py  f6a7b8c9d0e1_add_products_bom.py  g7b8c9d0e1f2_add_image_url_to_products.py  h8c9d0e1f2g3_add_bills_table.py  i9d0e1f2g3h4_add_bill_discount_previous_balance.py  j0e1f2g3h4i5_add_bill_id_to_transactions.py  k1f2g3h4i5j6_add_reference_fields_to_inv_transactions.py  l2g3h4i5j6k7_add_deleted_at_to_quality_tables.py  m3h4i5j6k7l8_partial_unique_bill_number.py  n4i5j6k7l8m9_add_todos_table.py  o5j6k7l8m9n0_add_overhead_tables.py  p6k7l8m9n0o1_add_order_accessories.py  q7l8m9n0o1p2_standalone_bills.py  r8m9n0o1p2q3_add_share_links.py  (+1 more)
backend/app/: main.py
backend/docs/: smoke-test-results.md
backend/migrations/: env.py
backend/scripts/: README.md  fix_d_series_and_mismatches.py  import_ledger.py  reset_admin.py
(+161 files in other folders)
